--- a/README.Rmd
+++ b/README.Rmd
@@ -23,13 +23,7 @@ The goal of youTubeR is to provide the user with tools to facilitate interacting
 
 ## Installation
 
-You can install the released version of youTubeR from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("youTubeR")
-```
-
-And the development version from [GitHub](https://github.com/) with:
+You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
